--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: jo-flask
     ports:
       - "5000:5000"
+    command: gunicorn -w 4 -b 0.0.0.0:5000 main:app
     environment:
       - DOCKER=1
       - DATABASE_URI=${DATABASE_URI}
